Building popup.html and accompanying CSS styles. Title block & insight structure complete.

--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Hello</h1>
+    <link rel="stylesheet" href="./assets/popup.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>Rocketstart Insights</title>
 </head>
-<body>
-    
+<body class="container">
+  <div class="title-block">
+    <h1>Rocketstart Insights</h1>
+  </div>
+  <div class="insights">
+    <div class="insight section__margin">
+      <h2 class="insight__title">Greeting</h2>
+      <span class="material-icons">done</span>
+      <h3 class="insight__number">2</h3>
+    </div>
+    <div class="insight section__margin">
+      <h2 class="insight__title">Introduction</h2>
+      <span class="material-icons">done</span>
+      <h3 class="insight__number">40</h3>
+    </div>
+    <div class="insight section__margin">
+      <h2 class="insight__title">Call to Action</h2>
+      <span class="material-icons">done</span>
+      <h3 class="insight__number">15</h3>
+    </div>
+  </div>
 </body>
 </html>
