Minor changes to popup CSS. Added (non-functional) exit button to top right corner of HTML.

--- a/popup.html
+++ b/popup.html
@@ -11,21 +11,22 @@
 <body class="container">
   <div class="title-block">
     <h1>Rocketstart Insights</h1>
+    <span class="material-icons exit__button">close</span>
   </div>
   <div class="insights">
     <div class="insight section__margin">
       <h2 class="insight__title">Greeting</h2>
-      <span class="material-icons">done</span>
+      <span class="material-icons insight__icon">done</span>
       <h3 class="insight__number">2</h3>
     </div>
     <div class="insight section__margin">
       <h2 class="insight__title">Introduction</h2>
-      <span class="material-icons">done</span>
+      <span class="material-icons insight__icon">done</span>
       <h3 class="insight__number">40</h3>
     </div>
     <div class="insight section__margin">
       <h2 class="insight__title">Call to Action</h2>
-      <span class="material-icons">done</span>
+      <span class="material-icons insight__icon">done</span>
       <h3 class="insight__number">15</h3>
     </div>
   </div>
