Modified popup.html window to 300px. Added gradient bar as insight component. Modified CSS styles and structure.

--- a/popup.html
+++ b/popup.html
@@ -14,21 +14,31 @@
     <span class="material-icons exit__button">close</span>
   </div>
   <div class="insights">
-    <div class="insight section__margin">
-      <h2 class="insight__title">Greeting</h2>
-      <span class="material-icons insight__icon">done</span>
-      <h3 class="insight__number">2</h3>
+
+    <!-- Insight #1: Greeting -->
+    <div class="insight__container">
+      <div class="insight">
+        <h2 class="insight__title">Greeting</h2>
+        <div class="insight__metrics">
+          <span class="material-icons insight__icon">done</span>
+          <h3 class="insight__number">2</h3>
+        </div>
+      </div>
+      <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
     </div>
-    <div class="insight section__margin">
-      <h2 class="insight__title">Introduction</h2>
-      <span class="material-icons insight__icon">done</span>
-      <h3 class="insight__number">40</h3>
+
+    <!-- Insight #1: Introduction -->
+    <div class="insight__container">
+      <div class="insight">
+        <h2 class="insight__title">Introduction</h2>
+        <div class="insight__metrics">
+          <span class="material-icons insight__icon">done</span>
+          <h3 class="insight__number">45</h3>
+        </div>
+      </div>
+      <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
     </div>
-    <div class="insight section__margin">
-      <h2 class="insight__title">Call to Action</h2>
-      <span class="material-icons insight__icon">done</span>
-      <h3 class="insight__number">15</h3>
-    </div>
+
   </div>
 </body>
 </html>
