Added shadows to each element, decreased all font sizes, added horizontal line In between check and #, colored the checks green, increased padding

--- a/popup.html
+++ b/popup.html
@@ -27,13 +27,37 @@
       <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
     </div>
 
-    <!-- Insight #1: Introduction -->
+    <!-- Insight #2: Introduction -->
     <div class="insight__container">
       <div class="insight">
         <h2 class="insight__title">Introduction</h2>
         <div class="insight__metrics">
           <span class="material-icons insight__icon">done</span>
           <h3 class="insight__number">45</h3>
+        </div>
+      </div>
+      <input type="range" disabled min="0" max="10" value="4" class="insight__slider"/>
+    </div>
+
+    <!-- Insight #3: Call to Action -->
+    <div class="insight__container">
+      <div class="insight">
+        <h2 class="insight__title">Call to Action</h2>
+        <div class="insight__metrics">
+          <span class="material-icons insight__icon">done</span>
+          <h3 class="insight__number">25</h3>
+        </div>
+      </div>
+      <input type="range" disabled min="0" max="10" value="7" class="insight__slider"/>
+    </div>
+
+    <!-- Insight #4: Grade Level -->
+    <div class="insight__container">
+      <div class="insight">
+        <h2 class="insight__title">Grade Level</h2>
+        <div class="insight__metrics">
+          <span class="material-icons insight__icon">done</span>
+          <h3 class="insight__number">6</h3>
         </div>
       </div>
       <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
