--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./assets/popup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- JS loaded before HTML, and element does not exist in DOM. Defer needed. -->
-    <script src="contentScript.js" defer></script>
+    <!-- <script src="contentScript.js" defer></script> -->
     <title>Rocketstart Insights</title>
 </head>
 <body class="container">
   <div class="title-block">
     <h1>Rocketstart Insights</h1>
-    <span class="material-icons exit__button" id="exit">close</span>
+    <!-- <span class="material-icons exit__button" id="exit">close</span> -->
   </div>
   <div class="insights">
 
