--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- JS loaded before HTML, and element does not exist in DOM. Defer needed. -->
     <!-- <script src="contentScript.js" defer></script> -->
+    <script type="text/javascript" src="popup.js"></script>
     <title>Rocketstart Insights</title>
 </head>
 <body class="container">
@@ -16,6 +17,18 @@
     <!-- <span class="material-icons exit__button" id="exit">close</span> -->
   </div>
   <div class="insights">
+
+    <!-- Insight #0: Word Count -->
+    <div class="insight__container">
+      <div class="insight">
+        <h2 class="insight__title">Words</h2>
+        <div class="insight__metrics">
+          <span class="material-icons insight__icon">done</span>
+          <h3 class="insight__number" id="words">0</h3>
+        </div>
+      </div>
+      <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
+    </div>
 
     <!-- Insight #1: Greeting -->
     <div class="insight__container">
