Added basic functionality to the Paragraphs slider.

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
           <h3 class="insight__number" id="paragraphs">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="10" value="5" class="insight__slider"/>
+      <input type="range" disabled min="0" max="5" value="0" class="insight__slider" id="range1"/>
     </div>
 
     <!-- Insight #1: Question -->
