Added functional exit button on iframe.

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
 <body class="container">
   <div class="title-block">
     <h1>Rocketstart Insights</h1>
-    <!-- <span class="material-icons exit__button" id="exit">close</span> -->
+    <span class="material-icons exit__button" id="exit">close</span>
   </div>
   <div class="insights">
 
@@ -47,11 +47,11 @@
       <div class="insight">
         <h2 class="insight__title">Grade Level</h2>
         <div class="insight__metrics">
-          <span class="material-icons insight__icon" id="exit">done</span>
-          <h3 class="insight__number">45</h3>
+          <span class="material-icons insight__icon" id="check3">done</span>
+          <h3 class="insight__number">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="10" value="4" class="insight__slider"/>
+      <input type="range" disabled min="0" max="10" value="0" class="insight__slider"/>
     </div>
 
     <!-- Insight #3: Language -->
@@ -59,11 +59,11 @@
       <div class="insight">
         <h2 class="insight__title">Language</h2>
         <div class="insight__metrics">
-          <span class="material-icons insight__icon">done</span>
-          <h3 class="insight__number">25</h3>
+          <span class="material-icons insight__icon" id="check4">done</span>
+          <h3 class="insight__number">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="10" value="7" class="insight__slider"/>
+      <input type="range" disabled min="0" max="10" value="0" class="insight__slider"/>
     </div>
 
   </div>
