Fixed question mark bug, where each individual question mark in text would add to the question counter. Built initial functionality for grade level usingFlesch-Kincaid readability test. Tracks sentences, words, and syllables. Grades range from 5-12. Syllables have not been extensively tested, but are mostly accurate. Perceived readability vs. output grade level has also not been extensively tested.

--- a/popup.html
+++ b/popup.html
@@ -48,10 +48,10 @@
         <h2 class="insight__title">Grade Level</h2>
         <div class="insight__metrics">
           <span class="material-icons insight__icon" id="check3">done</span>
-          <h3 class="insight__number">0</h3>
+          <h3 class="insight__number" id="grade">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="10" value="0" class="insight__slider"/>
+      <input type="range" disabled min="500" max="1200" value="0" class="insight__slider" id="range3"/>
     </div>
 
     <!-- Insight #3: Language -->
