Modified UI to automatically display paragraphs. Removed clunky timer function for animation and replaced input slider with divs, using the slider function to animate the insight value changes.

--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,12 @@
           <h3 class="insight__number" id="paragraphs">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="500" value="0" class="insight__slider" id="range1"/>
+      <div>
+        <div class="insight__slider">
+          <div class="slider__rectangle" id="paragraph__slider"></div>
+        </div>
+      </div>
+      <div class="slider__gradient"></div>
     </div>
 
     <!-- Insight #1: Question -->
@@ -38,7 +43,12 @@
           <h3 class="insight__number" id="questions">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="500" value="0" class="insight__slider" id="range2"/>
+      <div>
+        <div class="insight__slider">
+          <div class="slider__rectangle" id="question__slider"></div>
+        </div>
+      </div>
+      <div class="slider__gradient"></div>
     </div>
 
     <!-- Insight #2: Grade level -->
@@ -50,10 +60,15 @@
           <h3 class="insight__number" id="grade">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="500" max="1200" value="0" class="insight__slider" id="range3"/>
+      <div>
+        <div class="insight__slider">
+          <div class="slider__rectangle" id="grade__slider"></div>
+        </div>
+      </div>
+      <div class="slider__gradient"></div>
     </div>
 
-    <!-- Insight #3: Language -->
+    <!-- Insight #3: Wording -->
     <div class="insight__container" id="wording__container">
       <div class="insight">
         <h2 class="insight__title">Wording</h2>
@@ -62,7 +77,12 @@
           <h3 class="insight__number">0</h3>
         </div>
       </div>
-      <input type="range" disabled min="0" max="10" value="0" class="insight__slider"/>
+      <div>
+        <div class="insight__slider">
+          <div class="slider__rectangle" id="wording__slider"></div>
+        </div>
+      </div>
+      <div class="slider__gradient"></div>
     </div>
   </div>
   <hr class="horizontal__rule">
