Removed popup.html as default popup on Extensions Chrome list. Modified working URL so extension does not need to be reloaded on navigating to a user's page. Changed background of iframe to grey. Changed explanations to be cards too. Added animation on hover and click of insights.

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/popup.css">
+    <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;600;800&display=swap" rel="stylesheet">
     <!-- JS loaded before HTML, and element does not exist in DOM. Defer needed. -->
     <!-- <script src="contentScript.js" defer></script> -->
     <script type="text/javascript" src="popup.js" defer></script>
@@ -121,7 +126,7 @@
         You'll save characters and allow your message to pop.
         Hint: use "call" instead of "meet" or "intro" instead of "introduction".
       </p>
-      <h4 class="insight__title red bold" id="adverbsHeader">Please remove adverbs:</h4>
+      <h3 class="insight__title" id="adverbsHeader">Please remove adverbs:</h3>
       <p class="red italic"id="flaggedAdverbs"></p>
     </div>
   </div>
