Added "learn more" to explanation cards. Fixed "action" class as it was interfering with LinkedIn's action class. Modified iframe to integrate with the rest of the LinkedIn page, rather than an overlay. Added left border to iframe. Slight tweak to "hover" behavior on insights

--- a/popup.html
+++ b/popup.html
@@ -101,6 +101,7 @@
         Break your message into three components:
         a greeting, introduction & call to action, and a farewell.
       </p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
     <!-- Explanation #1: Questions -->
     <div class="explanation__container" id="question__explanation">
@@ -109,6 +110,7 @@
         Include a call to action in your message.
         Your recipient should learn why you're interested in connecting with them.
       </p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
     <!-- Explanation #2: Grade -->
     <div class="explanation__container" id="grade__explanation">
@@ -117,6 +119,7 @@
         Make your message easy to read.
         Your message will be more clear with short sentences and accessible words.
       </p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
     <!-- Explanation #3: Wording -->
     <div class="explanation__container" id="wording__explanation">
@@ -128,6 +131,7 @@
       </p>
       <h3 class="insight__title" id="adverbsHeader">Please remove adverbs:</h3>
       <p class="red italic"id="flaggedAdverbs"></p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
   </div>
 </body>
