Added dynamic draggable button arrow changes based on min/max frame window bounds for both window resize and user input. Slight modifications to CSS styles to correct small inconsistencies found through media queries. Chaged "Question Count" insight title to "Questions".

--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
     <!-- Insight #1: Question -->
     <div class="insight__container" id="question__container">
       <div class="insight">
-        <h2 class="insight__title">Question Count</h2>
+        <h2 class="insight__title">Questions</h2>
         <div class="insight__metrics">
           <span class="material-icons insight__icon" id="check2">done</span>
           <h3 class="insight__number" id="questions">0</h3>
