--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./assets/popup.css">
     <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;600;800&display=swap" rel="stylesheet">
     <!-- JS loaded before HTML, and element does not exist in DOM. Defer needed. -->
-    <!-- <script src="contentScript.js" defer></script> -->
     <script type="text/javascript" src="popup.js" defer></script>
     <title>Rocketstart Insights</title>
 </head>
@@ -79,6 +79,7 @@
         <h2 class="insight__title">Wording</h2>
         <div class="insight__metrics">
           <span class="material-icons insight__icon" id="check4">done</span>
+          <span class="material-symbols-outlined insight__warning" id="warning">warning</span>
           <h3 class="insight__number" id="words">0</h3>
         </div>
       </div>
