Removed conflicting classes between Rocketstart and LinkedIn (".container"). Added responsive invitation window behavior if the iframe is open and the window or iframe is resized.

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="popup.js" defer></script>
     <title>Rocketstart Insights</title>
 </head>
-<body class="container">
+<body class="rocketstart__container">
   <div class="title-block">
     <h1>Rocketstart Insights</h1>
     <span class="material-icons exit__button" id="exit">close</span>
