--- a/popup.html
+++ b/popup.html
@@ -132,6 +132,19 @@
       </p>
       <h3 class="insight__title" id="adverbsHeader">Please remove adverbs:</h3>
       <p class="red italic"id="flaggedAdverbs"></p>
+      <h3 class="insight__title" id="verbsHeader">Please remove weak verbs:</h3>
+      <p class="red italic"id="flaggedVerbs"></p>
+      <div id="verbExamples" class="verb__example">
+        <h4>Example:</h4>
+        <div class="good__example">
+          <span class="material-icons explanation__cross">close</span>
+          <p id="badExample"></p>
+        </div>
+        <div class="bad__example">
+          <span class="material-icons explanation__check">done</span>
+          <p id="goodExample"></p>
+        </div>
+      </div>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
   </div>
