Tweaked grade level computation. Added functionality for multiple example sentences to be displayed if numerous weak verbs are included in the text.  Fixed bug which sent duplicate messages from the profile script to popup script. Refactored HTML to be dynamic based on number of weak verbs added. Slight weak verb text tweaks.

--- a/popup.html
+++ b/popup.html
@@ -134,17 +134,8 @@
       <p class="red italic"id="flaggedAdverbs"></p>
       <h3 class="insight__title" id="verbsHeader">Please remove weak verbs:</h3>
       <p class="red italic"id="flaggedVerbs"></p>
-      <div id="verbExamples" class="verb__example">
-        <h4>Example:</h4>
-        <div class="good__example">
-          <span class="material-icons explanation__cross">close</span>
-          <p id="badExample"></p>
-        </div>
-        <div class="bad__example">
-          <span class="material-icons explanation__check">done</span>
-          <p id="goodExample"></p>
-        </div>
-      </div>
+      <h4 id="verbExamplesHeading">Example:</h4>
+      <div id="verbExamples" class="verb__example"></div>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
   </div>
