Tweaks before user testing branch: modified wording UI. Added media queries for H4. Modified gradient and icon colors. Modified explanation text.

--- a/popup.html
+++ b/popup.html
@@ -97,10 +97,9 @@
     <div class="explanation__container" id="paragraph__explanation">
       <h2 class="insight__title">Paragraphs</h2>
       <p>
-        Studies show that the brain likes to be presented with three choices.
+        Break your message into three components: a greeting, message body, and a farewell.
+        The brain likes to be presented with three choices.
         Anything higher leads to confusion.
-        Break your message into three components:
-        a greeting, introduction & call to action, and a farewell.
       </p>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
@@ -109,6 +108,7 @@
       <h2 class="insight__title">Question Count</h2>
       <p>
         Include a call to action in your message.
+        Messages with questions receive higher reply rates.
         Your recipient should learn why you're interested in connecting with them.
       </p>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
@@ -118,7 +118,8 @@
       <h2 class="insight__title">Grade Level</h2>
       <p>
         Make your message easy to read.
-        Your message will be more clear with short sentences and accessible words.
+        Messages with short sentences and accessible words receive higher reply rates.
+        Understanding your intent should be effortless.
       </p>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
     </div>
@@ -126,14 +127,14 @@
     <div class="explanation__container" id="wording__explanation">
       <h2 class="insight__title">Wording</h2>
       <p>
-        Avoid adverbs, weak verbs, and ineffective nouns.
-        You'll save characters and allow your message to pop.
-        Hint: use "call" instead of "meet" or "intro" instead of "introduction".
+        Avoid adverbs and weak verbs.
+        You'll save characters, which allows you to write more.
+        Any ineffective words will be detected and displayed below.
       </p>
       <h3 class="insight__title" id="adverbsHeader">Please remove adverbs:</h3>
-      <p class="red italic"id="flaggedAdverbs"></p>
+      <p class="red italicBold"id="flaggedAdverbs"></p>
       <h3 class="insight__title" id="verbsHeader">Please remove weak verbs:</h3>
-      <p class="red italic"id="flaggedVerbs"></p>
+      <p class="red italicBold"id="flaggedVerbs"></p>
       <h4 id="verbExamplesHeading">Example:</h4>
       <div id="verbExamples" class="verb__example"></div>
       <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
