Preparing branch for chrome submission

--- a/popup.html
+++ b/popup.html
@@ -101,7 +101,7 @@
         The brain likes to be presented with three choices.
         Anything higher leads to confusion.
       </p>
-      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/e/2PACX-1vSxxAOeuJUgsCIWTzPaK5X507Mc6v7Rk7edTN9gpJZTuEBP7ftR0kLotVEhUGXmjT_3PtdPBkx412tp/pub">Learn more</a></p>
     </div>
     <!-- Explanation #1: Questions -->
     <div class="explanation__container" id="question__explanation">
@@ -111,7 +111,7 @@
         Messages with questions receive higher reply rates.
         Your recipient should learn why you're interested in connecting with them.
       </p>
-      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/e/2PACX-1vSxxAOeuJUgsCIWTzPaK5X507Mc6v7Rk7edTN9gpJZTuEBP7ftR0kLotVEhUGXmjT_3PtdPBkx412tp/pub">Learn more</a></p>
     </div>
     <!-- Explanation #2: Grade -->
     <div class="explanation__container" id="grade__explanation">
@@ -121,7 +121,7 @@
         Messages with short sentences and accessible words receive higher reply rates.
         Understanding your intent should be effortless.
       </p>
-      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/e/2PACX-1vSxxAOeuJUgsCIWTzPaK5X507Mc6v7Rk7edTN9gpJZTuEBP7ftR0kLotVEhUGXmjT_3PtdPBkx412tp/pub">Learn more</a></p>
     </div>
     <!-- Explanation #3: Wording -->
     <div class="explanation__container" id="wording__explanation">
@@ -137,7 +137,7 @@
       <p class="red italicBold"id="flaggedVerbs"></p>
       <h4 id="verbExamplesHeading">Example:</h4>
       <div id="verbExamples" class="verb__example"></div>
-      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://rocketstart.careers">Learn more</a></p>
+      <p class="learn__more"><a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/e/2PACX-1vSxxAOeuJUgsCIWTzPaK5X507Mc6v7Rk7edTN9gpJZTuEBP7ftR0kLotVEhUGXmjT_3PtdPBkx412tp/pub">Learn more</a></p>
     </div>
   </div>
 </body>
